--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,21 +1,16 @@
 .header {
-  height: 10vh;
+  height: 12%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  background-color: olivedrab;
-  position: sticky;
+  background-color: white;
   top: 0;
   z-index: 100;
-  border-radius: 40px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin: 1%;
 }
 
 .header__logo1 {
-  width: 180px;
+  width: 30%;
   object-fit: contain;
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: 1%;
 }
