--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,20 +1,19 @@
 .home {
-  height: 80vh;
+  height: 80%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  background-color: olivedrab;
+  background-color: #4267b2;
   z-index: 100;
   bottom: 0;
-  position: sticky;
-  border-radius: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 10px;
+  border-radius: 50px;
+  margin: 1%;
 }
 
-.send__logo {
-  width: 5%;
-  display: flex;
-  position: relative;
+.mic__icon {
+  transform: scale(10);
+  place-content: center;
+  background-color: #4267b2;
+  border-radius: 50%;
+  color: white;
 }
