Google Auth done

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,8 @@
 .header {
   height: 12%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between; /* If displaying with the logo of gmail id*/
+  /*justify-content: center;*/
   align-items: center;
   background-color: white;
   top: 0;
