--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,5 @@
+.container {
+}
 .home {
   height: 80%;
   display: flex;
@@ -16,4 +18,21 @@
   background-color: #4267b2;
   border-radius: 50%;
   color: white;
+}
+
+.bottom {
+  height: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #4267b2;
+  margin: 1%;
+  border-radius: 50px;
+}
+
+.bottom__logo1 {
+  transform: scale(5);
+  border-radius: 50%;
+  color: white;
+  margin: 8%;
 }
