--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,13 @@
   display: flexbox;
   height: 80vh;
 }
+
+.signin_button {
+  height: 20%;
+  margin: 10%;
+  border-radius: 30px;
+  text-align: center;
+  padding-top: 10%;
+  font-size: larger;
+  background-color: #4267b2;
+}
