--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,11 @@
 }
 
 .signin_button {
-  height: 20%;
-  margin: 10%;
-  border-radius: 30px;
-  text-align: center;
-  padding-top: 10%;
-  font-size: larger;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #4267b2;
+  z-index: 100;
+  border-radius: 50px;
 }
