--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,20 +4,31 @@
   justify-content: space-between; /* If displaying with the logo of gmail id*/
   /*justify-content: center;*/
   align-items: center;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   top: 0;
   z-index: 100;
   margin: 1%;
 }
 
-.header__logo1 {
+.header__image {
+  margin-left: 3%;
+  border-radius: 10px;
+  height: 100%;
+}
+
+.header__logo {
   width: 30%;
   object-fit: contain;
-  margin-top: 1%;
+  margin-top: 2%;
 }
 
 .signout_button {
+  margin-top: 1%;
   transform: scale(4);
-  padding-right: 3%;
+  margin-right: 5%;
   color: #4267b2;
+}
+
+img[src=""] {
+  display: none;
 }
