--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -39,7 +39,17 @@
   margin: 8%;
 }
 
-.stop_button {
+.stop_button_visible {
+  visibility: visible;
+  margin-top: 1%;
+  transform: scale(7);
+  background-color: #4267b2;
+  border-radius: 50%;
+  color: white;
+}
+
+.stop_button_hidden {
+  visibility: hidden;
   margin-top: 1%;
   transform: scale(7);
   background-color: #4267b2;
